--- a/package.json
+++ b/package.json
@@ -1,24 +1,16 @@
 {
   "name": "wheelevent-react",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "devDevependencies": {
+  "private": true,
+  "dependencies": {
     "react": "^15.6.1",
-    "uglify-js": "^3.0.27"
+    "react-dom": "^15.6.1",
+    "react-scripts": "1.0.10"
   },
-  "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wheelEvent/WheelEvent-React.git"
-  },
-  "author": "ichigochou",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wheelEvent/WheelEvent-React/issues"
-  },
-  "homepage": "https://github.com/wheelEvent/WheelEvent-React#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
